tests/ui/bad_bounds.stderr
error: unsupported #[decycle] bound with associated constraints on non-local type
  --> tests/ui/bad_bounds.rs:30:13
   |
30 |         (): MyTrait<'b, MyTrait = T, T = T>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: this `where`-clause bound in the `impl` block targets a non-local type
  --> tests/ui/bad_bounds.rs:30:9
   |
30 |         (): MyTrait<'b, MyTrait = T, T = T>,
   |         ^^
help: use `Self` or an internal type defined within the `#[decycle]` module, such as `MyStruct`
  --> tests/ui/bad_bounds.rs:30:9
   |
30 |         (): MyTrait<'b, MyTrait = T, T = T>,
   |         ^^
